--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -30,14 +30,17 @@ Many attractive examples<br>
 
 <h2>Many attractive examples</h2>
 
-<h3>Start etc.</h3>
+<h3>Specials</h3>
 
-<a href="/MAE-gf/index">Start page</a><br>
+<a href="/MAE-gf/index">Home</a><br>
 <a href="/MAE-gf/docs/tricks">Notes</a><br>
 <a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>   
-<a href="https://d-bl.github.io/MAE-gf/docs/counting">Listing and counting stitches</a><br>
+<a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
 <br>
 <a href="/MAE-gf/docs/tricks#color-code"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
+<br>
+<a href="/MAE-gf/docs/flanders">Flanders grounds by &apos;t Groene Hart</a><br>
+<a href="/MAE-gf/docs/droste">Droste</a><br>
 
 <h3>Examples</h3>
 
@@ -51,11 +54,6 @@ Many attractive examples<br>
 <a href="/MAE-gf/docs/fish">Fish</a><br>
 <a href="/MAE-gf/docs/lotus">Lotus and Lattice</a><br>
 <a href="/MAE-gf/docs/misca">Miscellaneous examples</a><br>
-
-<h3>Specials</h3>
- 
-<a href="/MAE-gf/docs/flanders">Flanders grounds by &apos;t Groene Hart</a><br>
-<a href="/MAE-gf/docs/droste">Droste</a><br>
 
 <p><hr></p>
 
