--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -13,26 +13,27 @@
 
 <a href="/tesselace-to-gf/">TesseLace</a><br>
 <a href="/gw-lace-to-gf/">Whiting</a><br>
-Many attractive examples<br>
 {% if page.name == 'literature.md' %}
-               Literature
-               {% else %}
-               <a href="/MAE-gf/docs/literature">Literature</a>
-{% endif %}<br>
+    <a href="/MAE-gf/index">Many attractive examples</a><br>
+    Literature<br>
+{% else %}
+    Many attractive examples<br>
+    <a href="/MAE-gf/docs/literature">Literature</a>
+{% endif %}
 
 <h2>Groundforge</h2>
 
-<a href="/GroundForge/nets">Nets page</a><br> 
+<a href="/GroundForge/nets">Nets page</a><br>
 <a href="/GroundForge/tiles">Main page</a><br>
 <a href="/GroundForge/">User guide</a><br>
 
-<p><hr></p>
+<hr>
 
 <h2>Many attractive examples</h2>
 
 <a href="/MAE-gf/index">Home</a><br>
 <br>
-<a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>   
+<a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
@@ -52,7 +53,7 @@ Many attractive examples<br>
 <a href="/MAE-gf/docs/tricks">Notes</a><br>
 <a href="/MAE-gf/docs/tricks#color-code"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
 
-<p><hr></p>
+<hr>
 
 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/MAE-gf/assets/images/CC-BY-80x15.png"></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
   
