--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -2,12 +2,7 @@
 
 <a href="https://groups.io/g/GroundForge" target="_blank">User group</a><br>
 <a href="https://groundforge.wordpress.com" target="_blank">Support</a><br>
-<!-- adress about us needs to be moved -->
-{% if page.name == 'about-us.md' %}
-               About us
-               {% else %}
-               <a href="/MAE-gf/docs/about-us">About us</a>
-{% endif %}<br>
+<a href="/GroundForge-help/about-us">About us</a>
 
 <h2>Catalogues</h2>
 
