only one black item

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -13,12 +13,13 @@
 
 <a href="/tesselace-to-gf/">TesseLace</a><br>
 <a href="/gw-lace-to-gf/">Whiting</a><br>
-Many attractive examples<br>
 {% if page.name == 'literature.md' %}
-               Literature
-               {% else %}
-               <a href="/MAE-gf/docs/literature">Literature</a>
-{% endif %}<br>
+               <a href="/MAE-gf/index">Many attractive examples</a><br>
+               Literature<br>
+{% else %}
+               Many attractive examples<br>
+               <a href="/MAE-gf/docs/literature">Literature</a><br>
+{% endif %}
 
 <h2>Groundforge</h2>
 
@@ -30,8 +31,6 @@ Many attractive examples<br>
 
 <h2>Many attractive examples</h2>
 
-<a href="/MAE-gf/index">Home</a><br>
-<br>
 <a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>   
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
 <br>
