elaborate whiting entry in sidebar

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -7,7 +7,7 @@
 <h2>Catalogues</h2>
 
 <a href="/tesselace-to-gf/">TesseLace</a><br>
-<a href="/gw-lace-to-gf/">Whiting</a><br>
+<a href="/gw-lace-to-gf/">Gertrude Whiting sampler</a><br>
 {% if page.name == 'literature.md' %}
     <a href="/MAE-gf/index">Many attractive examples</a><br>
     Literature<br>
