--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -50,16 +50,14 @@
 
 <hr>
 
-<li><h3>Contribute</h3>
-    <ul>
-        <li>
-        <li><a href="/GroundForge-help/Reuse">Share and reuse</a></li>
-        <li>
-            <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository/">Propose changes</a> to
-            <a href="https://github.com/d-bl/MAE-gf/tree/master/docs">help </a> pages
-        </li>
-    </ul>
-</li>
+<h3>Contribute</h3>
+<ul>
+    <li><a href="/GroundForge-help/Reuse">Share and reuse</a></li>
+    <li>
+        <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository/" target="_blank">Propose changes</a> to
+        <a href="https://github.com/d-bl/MAE-gf/tree/master/docs" target="_blank">help </a> pages
+    </li>
+</ul>
 
 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/MAE-gf/assets/images/CC-BY-80x15.png"></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
   
