--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -54,8 +54,9 @@
 <ul>
     <li><a href="/GroundForge-help/Reuse">Share and reuse</a></li>
     <li>
-        <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository/" target="_blank">Propose changes</a> to
-        <a href="https://github.com/d-bl/MAE-gf/tree/master/docs" target="_blank">help </a> pages
+        <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository/" target="_blank">Propose changes</a>
+        to the
+        <a href="https://github.com/d-bl/MAE-gf/tree/master/docs" target="_blank">pages</a>
     </li>
 </ul>
 
