--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@ header a.button { background-color: #2e7bcf; }
 #sidebar ul { padding-left: 0; margin-bottom: 0px; font-weight: bold; font-size: 12px; color: #474747; }
 #sidebar ul { font-weight: normal; }
 #sidebar sub { font-weight: normal; }
-#sidebar li { list-style-type: none; { padding-bottom: 0; }
+#sidebar li { list-style-type: none; padding-bottom: 0; }
 
 /* stitches & elements */
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
