--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -18,9 +18,9 @@
 
 <h2>Groundforge</h2>
 
-<a href="/GroundForge/nets">Nets page</a><br>
-<a href="/GroundForge/tiles">Main page</a><br>
+<a href="/GroundForge/tiles">Diagram editor</a><br>
 <a href="/GroundForge/">User guide</a><br>
+<a href="/GroundForge/nets">Net variations</a><br>
 
 <hr>
 
