--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -2,36 +2,33 @@
 
 <a href="https://groups.io/g/GroundForge" target="_blank">User group</a><br>
 <a href="https://groundforge.wordpress.com" target="_blank">Support</a><br>
-<!-- adress about us needs to be moved -->
-{% if page.name == 'about-us.md' %}
-               About us
-               {% else %}
-               <a href="/MAE-gf/docs/about-us">About us</a>
-{% endif %}<br>
+<a href="/GroundForge-help/about-us">About us</a>
 
 <h2>Catalogues</h2>
 
-<a href="/tesselace-to-gf/">TesseLace</a><br>
-<a href="/gw-lace-to-gf/">Whiting</a><br>
+<a href="/tesselace-to-gf/">TesseLace index</a><br>
+<a href="/gw-lace-to-gf/">Gertrude Whiting sampler</a><br>
 {% if page.name == 'literature.md' %}
-               <a href="/MAE-gf/index">Many attractive examples</a><br>
-               Literature<br>
+<a href="/MAE-gf/index">Many attractive examples</a><br>
+Literature<br>
 {% else %}
-               Many attractive examples<br>
-               <a href="/MAE-gf/docs/literature">Literature</a><br>
+Many attractive examples<br>
+<a href="/MAE-gf/docs/literature">Literature</a>
 {% endif %}
 
 <h2>Groundforge</h2>
 
-<a href="/GroundForge/nets">Nets page</a><br> 
-<a href="/GroundForge/tiles">Main page</a><br>
+<a href="/GroundForge/tiles">Diagram editor</a><br>
 <a href="/GroundForge/">User guide</a><br>
+<a href="/GroundForge/nets">Net variations</a><br>
 
-<p><hr></p>
+<hr>
 
 <h2>Many attractive examples</h2>
 
-<a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>   
+<a href="/MAE-gf/index">Home</a><br>
+<br>
+<a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
@@ -50,8 +47,15 @@
 <br>
 <a href="/MAE-gf/docs/tricks">Notes</a><br>
 <a href="/MAE-gf/docs/tricks#color-code"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
-
-<p><hr></p>
+<hr>
+<h3>Contribute</h3>
+<ul>
+    <li><a href="/GroundForge-help/Reuse">Share and reuse</a></li>
+    <li>
+        <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository/" target="_blank">Propose changes</a>
+        to the
+        <a href="https://github.com/d-bl/MAE-gf/tree/master/docs" target="_blank">pages</a>
+    </li>
+</ul>
 
 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/MAE-gf/assets/images/CC-BY-80x15.png"></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-  
