added <br>  for consistency

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -2,7 +2,7 @@
 
 <a href="https://groups.io/g/GroundForge" target="_blank">User group</a><br>
 <a href="https://groundforge.wordpress.com" target="_blank">Support</a><br>
-<a href="/GroundForge-help/about-us">About us</a>
+<a href="/GroundForge-help/about-us">About us</a><br>
 
 <h2>Catalogues</h2>
 
@@ -13,7 +13,7 @@
 Literature<br>
 {% else %}
 Many attractive examples<br>
-<a href="/MAE-gf/docs/literature">Literature</a>
+<a href="/MAE-gf/docs/literature">Literature</a><br>
 {% endif %}
 
 <h2>Groundforge</h2>
@@ -47,7 +47,9 @@ Many attractive examples<br>
 <br>
 <a href="/MAE-gf/docs/tricks">Notes</a><br>
 <a href="/MAE-gf/docs/tricks#color-code"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
+
 <hr>
+
 <h3>Contribute</h3>
 <ul>
     <li><a href="/GroundForge-help/Reuse">Share and reuse</a></li>
