--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -21,9 +21,9 @@
 </form>
 
 <p style="margin-top: 1em">
-    <a id="roseButton" href="#val"><img src="/MAE-gf/images/droste/rose.svg" class="clpic"></a>
-    <a id="ltrButton" href="#val"><img src="/MAE-gf/images/droste/bias-ltr.svg" class="clpic"></a>
-    <a id="rtlButton" href="#val"><img src="/MAE-gf/images/droste/bias-rtl.svg" class="clpic"></a>
+    <a id="roseButton" href="#val"><img src="/MAE-gf/images/droste/rose.svg" class="clpic" title="rose ground via ctc"></a>
+    <a id="ltrButton" href="#val"><img src="/MAE-gf/images/droste/bias-ltr.svg" class="clpic" title="bias ground via ltr"></a>
+    <a id="rtlButton" href="#val"><img src="/MAE-gf/images/droste/bias-rtl.svg" class="clpic" title="bias ground via "rtl"></a>
 </p>
 
 
