--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -55,7 +55,7 @@ Many attractive examples<br>
     <li><a href="/GroundForge-help/Reuse">Share and reuse</a></li>
     <li>
         {% if page.name  %}
-        <a href="{{ site.github.repository_url }}/edit/master/docs/{{ page.name }}" target="_blank" title="typo's, grammar, whatever">propose changes</a> to this page.
+        <a href="{{ site.github.repository_url }}/edit/master/{{ page.path }}" target="_blank" title="typo's, grammar, whatever">propose changes</a> to this page.
         {% else %}
         <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository/" target="_blank">Propose changes</a> to
         <a href="{{ site.github.repository_url }}/blob/master/docs/" target="_blank">help</a> pages.
