--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -21,7 +21,7 @@ Many attractive examples<br>
 <a href="/GroundForge/tiles">Diagram editor</a><br>
 <a href="/GroundForge/">User guide</a><br>
 <a href="/GroundForge/nets">Net variations</a><br>
-<li><a href="GroundForge/symmetry">Symmetries</a> </li>
+<li><a href="/GroundForge/symmetry">Symmetries</a> </li> 
 
 <hr>
 
