--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -21,7 +21,7 @@ Many attractive examples<br>
 <a href="/GroundForge/tiles">Diagram editor</a><br>
 <a href="/GroundForge/">User guide</a><br>
 <a href="/GroundForge/nets">Net variations</a><br>
-<li><a href="/GroundForge/symmetry">Symmetries</a> </li> 
+<a href="/GroundForge/symmetry">Symmetries</a><br> 
 
 <hr>
 
@@ -47,7 +47,8 @@ Many attractive examples<br>
 <a href="/MAE-gf/docs/droste">Droste</a><br>
 <br>
 <a href="/MAE-gf/docs/tricks">Notes</a><br>
-<a href="/MAE-gf/docs/tricks#color-code"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
+<a href="/MAE-gf/docs/tricks#color-code"><img title="colors used, Belgian code" src="/MAE-gf/images/w-color.png"></a><br>
+<a href="/GroundForge-help/color-rules"><img title="colors used, 4 colors per stitch" src="/MAE-gf/images/to-color-rules.png"></a><br>
 
 <hr>
 
