--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -33,6 +33,7 @@ Many attractive examples<br>
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
+<a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
 <a href="/MAE-gf/docs/roses">Rose Grounds</a><br>
 <a href="/MAE-gf/docs/bias">Bias Grounds</a><br>
 <a href="/MAE-gf/docs/paris">Paris Grounds</a><br>
