standard header for all d-bl repo-s

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -18,7 +18,7 @@ Many attractive examples<br>
 
 <h2>Groundforge</h2>
 
-<a href="/GroundForge/tiles">Diagram editor</a><br>
+<a href="/GroundForge/stitches">Diagram editor</a><br>
 <a href="/GroundForge/">User guide</a><br>
 <a href="/GroundForge/nets">Net variations</a><br>
 <a href="/GroundForge/symmetry">Symmetries</a><br> 
