--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,8 @@
 <header>
   <div class="outer">
     <div class="inner">
-        <a href="{{ '/' | absolute_url }}">
-            <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+        <h1><a href="/">Diagrams for Bobbin Lace</a></h1>
+        <h2>G</h2>
         {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
@@ -47,6 +45,7 @@
 <div id="content-wrapper">
     <div class="inner clearfix">
         <section id="main-content">
+            <script src="/GroundForge/js/fork-warning.js"></script>
             {{ content }}
         </section>
 
