--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,5 @@
----
----
-
 @import "{{ site.theme }}";
+.deprecated { background: darkorange; padding: 2px; }
 
 Header { background: #2e7bcf url(../images/header-bg-left.png) top right repeat; padding: 0; }
 .outer { background: url(../images/header-bg-right.png) top right repeat-y; padding-top: 40px; padding-bottom: 40px; }
