--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -31,6 +31,7 @@ Many attractive examples<br>
 <br>
 <a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
+<a href="/MAE-gf/docs/counting-snow/">Counting snowflake families</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
 <a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
