layout standard header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   <div class="outer">
     <div class="inner">
         <h1><a href="/">Diagrams for Bobbin Lace</a></h1>
-        <h2>G</h2>
+        <h2>Many Attractive Examples for GroundForge</h2>
         {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
