layout standard header

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,6 @@
+---
+---
+
 @import "{{ site.theme }}";
 
 Header { background: #2e7bcf url(../images/header-bg-left.png) top right repeat; padding: 0; }
@@ -50,3 +53,6 @@ img[src$="x=button"] {box-shadow: 3px 3px #ebebeb;}
 /*.cctt td,th {text-align:left; padding:5px}*/
 .cctt td {text-align:left; padding:5px}
 .cctt th {text-align:center; padding:5px; font-weight:bold;}
+
+
+
