--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,10 @@ Header { background: #2e7bcf url(../images/header-bg-left.png) top right repeat;
 .outer { background: url(../images/header-bg-right.png) top right repeat-y; padding-top: 40px; padding-bottom: 40px; }
 header a.button { background-color: #2e7bcf; }
 
+header h1 a{color: #fff}
+header h1 a:hover {color: #9ddcff}
+.deprecated { background: darkorange; padding: 2px; }
+
 #sidebar ul { padding-left: 0; margin-bottom: 0px; font-weight: bold; font-size: 12px; color: #474747; }
 #sidebar ul { font-weight: normal; }
 #sidebar sub { font-weight: normal; }
