--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -1,8 +1,8 @@
 <form>
     First blob starts
-    <input type="radio" name="firstBlob" value="l" id="firstBlobLeft"> <label for="firstBlobLeft">left</label>
-    <input type="radio" name="firstBlob" value="r" id="firstBlobRight" checked> <label for="firstBlobRight">right</label>
-    <textarea id="blobs" name="blobs" rows="1" cols="35" spellcheck="false">rclc,ctc,ctc,crcl</textarea>
+    <input type="radio" name="firstBlob" value="l" id="firstBlobLeft" onchange="update()"> <label for="firstBlobLeft">left</label>
+    <input type="radio" name="firstBlob" value="r" id="firstBlobRight" checked onchange="update()"> <label for="firstBlobRight">right</label>
+    <textarea id="blobs" name="blobs" rows="1" cols="35" spellcheck="false" onchange="update()">rclc,ctc,ctc,crcl</textarea>
     <a id="link" href="#" target="_blank"><button type="button">Go</button></a>
     <script>
     function update(){
