--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -2,7 +2,7 @@
     First blob starts
     <input type="radio" name="firstBlob" value="l" id="firstBlobLeft" onchange="update()"> <label for="firstBlobLeft">left</label>
     <input type="radio" name="firstBlob" value="r" id="firstBlobRight" checked onchange="update()"> <label for="firstBlobRight">right</label>
-    <input type="text" id="blobs" name="blobs" rows="1" cols="35" spellcheck="false" onchange="update()" value="rclc,ctc,ctc,crcl">
+    <input type="text" id="blobs" name="blobs" width="35" spellcheck="false" onchange="update()" value="rclc,ctc,ctc,crcl">
     <a id="link" href="#" target="_blank"><button type="button">Go</button></a>
     <script>
     function update(){
