bouncing form, unique id

--- a/_includes/snow-6-bounce2.html
+++ b/_includes/snow-6-bounce2.html
@@ -17,7 +17,7 @@
         <label for="conn-open">open</label>
     </span>
     <input type="text" id="blobs" name="blobs" width="35" spellcheck="false" onchange="update()" value="lcr,rccl,lcr">
-    <a id="link" href="#" target="_blank">
+    <a id="bounce-link" href="#" target="_blank">
         <button type="button">Go</button>
     </a>
     <script>
@@ -25,7 +25,6 @@
             const blobs = document.getElementById('blobs').value.split(",");
             const nrOfBlobs = blobs.length;
             let href = "https://d-bl.github.io/GroundForge/stitches?";
-            console.log('nr of blobs = '+nrOfBlobs)
             if (nrOfBlobs == 2) {
                 href += "d3=" + blobs[0]
                 href += "&d5=" + blobs[1]
@@ -34,14 +33,12 @@
                 } else {
                     href += "&e4=crrrr&c4=cllll"
                 }
-                console.log(href)
                 href += "&patchWidth=7&patchHeight=7&tile=-5-5-5,5-5-5-,-5-5-5,5-5-5-,-5-5-5,5-5-5-&shiftColsSW=0&shiftRowsSW=6&shiftColsSE=6&shiftRowsSE=6"
                 href += "&b1=ctctttt&d1=ctctttt&f1=ctctttt&a2=ctctttt&c2=ctctttt&e2=ctctttt&b3=ctctttt&f3=ctctttt&a4=ctctttt&b5=ctctttt&f5=ctctttt&a6=ctctttt&c6=rrrrctctttt&e6=llllctctttt"
             } else if (nrOfBlobs >= 3) {
                 href += "d3=" + blobs[0]
                 href += "&d5=" + blobs[1]
                 href += "&d7=" + blobs[2]
-                console.log(href)
                 if (document.getElementById("first-bounce-right").checked) {
                     if (document.getElementById("conn-open").checked) {
                         href += "&a4=crcrrrr&c6=clcllll"
@@ -57,12 +54,10 @@
                     }
                     href += "&a4=-&c6=-"
                 }
-                console.log(href)
                 href += "&patchWidth=7&patchHeight=9&tile=-5-5,5-5-,-5-5,5-5-,-5-5,5-5-,-5-5,5-5-&shiftColsSW=0&shiftRowsSW=8&shiftColsSE=4&shiftRowsSE=8"
                 href += "&d1=ctctttt&b1=ctctttt&c2=ctctttt&a2=ctctttt&b3=ctctttt&c4=-&b5=ctctttt&a6=-&b7=ctctttt&c8=rrrrctctttt&a8=llllctctttt"
             }
-            console.log(href)
-            document.getElementById("link").href = href
+            document.getElementById("bounce-link").href = href
         }
         update()
     </script>
