bouncing form, root relative link

--- a/_includes/snow-6-bounce2.html
+++ b/_includes/snow-6-bounce2.html
@@ -24,7 +24,7 @@
         function update() {
             const blobs = document.getElementById('bounce-blobs').value.split(",");
             const nrOfBlobs = blobs.length;
-            let href = "https://d-bl.github.io/GroundForge/stitches?";
+            let href = "/GroundForge/stitches?";
             if (nrOfBlobs == 2) {
                 href += "d3=" + blobs[0]
                 href += "&d5=" + blobs[1]
