all pages have horizontal line and up-arrow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,8 @@
     <div class="inner clearfix">
         <section id="main-content">
             {{ content }}
+            <hr>
+            <a href>&uArr;</a>
         </section>
 
         <aside id="sidebar">
