--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 <header>
   <div class="outer">
     <div class="inner">
-        <h1><a href="/">Diagrams for Bobbin Lace</a></h1>
+        <h1><a href="https://github.com/d-bl">Diagrams for Bobbin Lace</a></h1>
         <h2>Many Attractive Examples for GroundForge</h2>
         {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
