banner without github logo

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@ header a.button { background-color: #2e7bcf; }
 header h1 a{color: #fff}
 header h1 a:hover {color: #9ddcff}
 .deprecated { background: darkorange; padding: 2px; }
+header h1, header h2 {width:100%}
 
 #sidebar ul { padding-left: 0; margin-bottom: 0px; font-weight: bold; font-size: 12px; color: #474747; }
 #sidebar ul { font-weight: normal; }
