--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,16 +30,8 @@
 <header>
   <div class="outer">
     <div class="inner">
-        <a href="{{ '/' | absolute_url }}">
-            <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-        {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
-        {% endif %}
-        {% if site.github.is_user_page %}
-        <a href="{{ site.github.repository_url }}" class="button"><small>Follow me on</small> GitHub</a>
-        {% endif %}
+        <h1><a href="https://github.com/d-bl">Diagrams for Bobbin Lace</a></h1>
+        <h2>Many Attractive Examples for GroundForge</h2>
     </div>
   </div>
 </header>
@@ -47,6 +39,7 @@
 <div id="content-wrapper">
     <div class="inner clearfix">
         <section id="main-content">
+            <script src="/GroundForge/js/fork-warning.js"></script>
             {{ content }}
             <hr>
             <a href>&uArr;</a>
