--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -1,33 +1,9 @@
-<h2>Contact</h2>
-
-<a href="https://groups.io/g/GroundForge" target="_blank">User group</a><br>
-<a href="https://groundforge.wordpress.com" target="_blank">Support</a><br>
-<a href="/GroundForge-help/about-us">About us</a><br>
-
-<h2>Catalogues</h2>
-
-<a href="/tesselace-to-gf/">TesseLace index</a><br>
-<a href="/gw-lace-to-gf/">Gertrude Whiting sampler</a><br>
-{% if page.name == 'literature.md' %}
-<a href="/MAE-gf/index">Many attractive examples</a><br>
-Literature<br>
-{% else %}
-Many attractive examples<br>
-<a href="/MAE-gf/docs/literature">Literature</a><br>
-{% endif %}
-
-<h2>Groundforge</h2>
-
-<a href="/GroundForge/stitches">Diagram editor</a><br>
-<a href="/GroundForge/">User guide</a><br>
-<a href="/GroundForge/nets">Net variations</a><br>
-<a href="/GroundForge/symmetry">Symmetries</a><br> 
-
+<h2><a href="https://d-bl/github.io">Home</a> - <a href="https://groundforge.wordpress.com" target="_blank">contact</a></h2>
 <hr>
 
 <h2>Many attractive examples</h2>
 
-<a href="/MAE-gf/index">Home</a><br>
+<a href="/MAE-gf/index">Intro</a><br>
 <br>
 <a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
