reduced sidebar, banner home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 <header>
   <div class="outer">
     <div class="inner">
-        <h1><a href="https://github.com/d-bl">Diagrams for Bobbin Lace</a></h1>
+        <h1><a href="https://d-bl.github.io">Diagrams for Bobbin Lace</a></h1>
         <h2>Many Attractive Examples for GroundForge</h2>
     </div>
   </div>
