reduced sidebar, banner home

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -1,4 +1,4 @@
-<h2><a href="https://d-bl/github.io">Home</a> - <a href="https://groundforge.wordpress.com" target="_blank">contact</a></h2>
+<h2><a href="https://d-bl.github.io">Home</a> - <a href="https://groundforge.wordpress.com" target="_blank">contact</a></h2>
 <hr>
 
 <h2>Many attractive examples</h2>
