--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -24,6 +24,7 @@
 <a href="/MAE-gf/docs/flanders">Flanders grounds by &apos;t Groene Hart</a><br>
 <a href="/MAE-gf/docs/droste">Droste</a><br>
 <br>
+<a href="/MAE-gf/docs/literature">Literature</a><br>
 <a href="/MAE-gf/docs/tricks">Notes</a><br>
 <a href="/MAE-gf/docs/tricks#color-code"><img title="colors used, Belgian code" src="/MAE-gf/images/w-color.png"></a><br>
 <a href="/GroundForge-help/color-rules"><img title="colors used, 4 colors per stitch" src="/MAE-gf/images/to-color-rules.png"></a><br>
