typo, hamburger menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,9 @@
 <div id="content-wrapper">
     <div class="inner clearfix">
         <section id="main-content">
+            <a href="#sidebar" id="hamburger-menu">
+                <img src="/MAE-gf/assets/images/hamburger.png" alt="Menu">
+            </a>
             <script src="/GroundForge/js/fork-warning.js"></script>
             {{ content }}
             <hr>
