--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -24,4 +24,7 @@
     <input type="radio" name="firstBlob" value="r" id="firstBlobRight" checked onchange="update()"> <label for="firstBlobRight">right</label>
     <input type="text" id="blobs" name="blobs" width="35" spellcheck="false" onchange="update()" value="rclc,ctc,ctc,crcl">
     <a id="link" href="#" target="_blank"><button type="button">Go</button></a>
+    <script>
+        update();
+    </script>
 </form>
