--- a/_includes/snow-6.html
+++ b/_includes/snow-6.html
@@ -1,6 +1,13 @@
+<form>
+    First blob starts
+    <input type="radio" name="firstBlob" value="l" id="firstBlobLeft" onchange="update()"> <label for="firstBlobLeft">left</label>
+    <input type="radio" name="firstBlob" value="r" id="firstBlobRight" checked onchange="update()"> <label for="firstBlobRight">right</label>
+    <input type="text" id="no-bounce-blobs" name="blobs" width="35" spellcheck="false" onchange="update()" value="rclc,ctc,ctc,crcl">
+    <a id="link" href="#" target="_blank"><button type="button">Go</button></a>
+</form>
 <script>
     function update(){
-        const blobs = document.getElementById('blobs').value.split(",");
+        const blobs = document.getElementById('no-bounce-blobs').value.split(",");
         const nrOfBlobs = blobs.length;
         let href = "/GroundForge/droste?droste2=";
         for (let i = 0; i < nrOfBlobs; i++) {
@@ -17,14 +24,5 @@
         document.getElementById("link").href = href + "&patchWidth=3&patchHeight=5&paintStitches=rcrc&tile=-5&shiftColsSW=-1&shiftRowsSW=1&shiftColsSE=1&shiftRowsSE=1";
     }
     update();
-</script>
-<form>
-    First blob starts
-    <input type="radio" name="firstBlob" value="l" id="firstBlobLeft" onchange="update()"> <label for="firstBlobLeft">left</label>
-    <input type="radio" name="firstBlob" value="r" id="firstBlobRight" checked onchange="update()"> <label for="firstBlobRight">right</label>
-    <input type="text" id="blobs" name="blobs" width="35" spellcheck="false" onchange="update()" value="rclc,ctc,ctc,crcl">
-    <a id="link" href="#" target="_blank"><button type="button">Go</button></a>
-</form>
-<script>
     update();
 </script>
