--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ header h1, header h2 {width:100%}
 #sidebar sub { font-weight: normal; }
 #sidebar li { list-style-type: none; padding-bottom: 0; }
 
-#main-content li li  { padding-bottom: 0; }
+#main-content li ul  { padding-bottom: 0; }
 
 #hamburger-menu {
     display: none;
