sidebar and intro

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -7,14 +7,17 @@
 <br>
 <a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>
 <a href="/MAE-gf/docs/counting">Listing and counting stitches</a><br>
-<a href="/MAE-gf/docs/counting-snow">Counting snowflake families</a><br>
+<br>
+Snow:<br>
+<a href="/MAE-gf/docs/counting-snow">Counting families</a><br>
+<a href="/MAE-gf/docs/snow-stitches">Stitches</a><br>
+<a href="/MAE-gf/docs/snowflakes">Miscellaneous</a><br>
 <br>
 <a href="/MAE-gf/docs/nets">Net Grounds</a><br>
 <a href="/MAE-gf/docs/ec">Embellished clothwork</a><br>
 <a href="/MAE-gf/docs/roses">Rose Grounds</a><br>
 <a href="/MAE-gf/docs/bias">Bias Grounds</a><br>
 <a href="/MAE-gf/docs/paris">Paris Grounds</a><br>
-<a href="/MAE-gf/docs/snowflakes">Snowflakes</a><br>
 <a href="/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="/MAE-gf/docs/tria">Triangular Grounds</a><br>
 <a href="/MAE-gf/docs/fish">Fish</a><br>
